// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Workflows /> should render correctly 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <MemoryRouter
    initialEntries={
      Array [
        "/workflows",
      ]
    }
  >
    <IntlProvider
      locale="en"
    >
      <Workflows
        history={
          Object {
            "goBack": [MockFunction],
            "push": [MockFunction],
          }
        }
        isLoading={false}
        pagination={Object {}}
        rbacGroups={Object {}}
        workflows={Array []}
      />
    </IntlProvider>
  </MemoryRouter>
</Provider>
`;

exports[`<Workflows /> should render correctly in loading state 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <MemoryRouter
    initialEntries={
      Array [
        "/workflows",
      ]
    }
  >
    <IntlProvider
      locale="en"
    >
      <Workflows
        history={
          Object {
            "goBack": [MockFunction],
            "push": [MockFunction],
          }
        }
        isLoading={true}
        pagination={Object {}}
        rbacGroups={Object {}}
        workflows={Array []}
      />
    </IntlProvider>
  </MemoryRouter>
</Provider>
`;
